--- a/Milestone 3/class_project/Views/Records/Details.cshtml
+++ b/Milestone 3/class_project/Views/Records/Details.cshtml
@@ -3,9 +3,15 @@
 @{
     ViewBag.Title = "Details";
 }
+
     <div class="jumbotron" style="background-color: cornflowerblue; color: white; margin-top: 20px;">
         <div class="container-fluid">
-            <h1>View Athlete Records</h1>
+            <h1>
+                <div class="jumbotron" style="background-color: cornflowerblue; color: white; margin-top: 20px;">
+                    <div class="container-fluid">
+                        <h1>View Athlete Records</h1>
+                    </div>
+                </div>
         </div>
     </div>
 
@@ -14,11 +20,19 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.Meet.Location)
+            @Html.DisplayNameFor(model => model.Athlete.FirstName)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Meet.Location)
+            @Html.DisplayFor(model => model.Athlete.FirstName)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Meet.MeetDate)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Meet.MeetDate)
         </dd>
 
         <dt>
