--- a/Milestone 3/class_project/Views/Records/Create.cshtml
+++ b/Milestone 3/class_project/Views/Records/Create.cshtml
@@ -28,6 +28,14 @@
         </div>
 
         <div class="form-group">
+            @Html.LabelFor(model => model.AthleteID, "AthleteID", htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.DropDownList("AthleteID", null, htmlAttributes: new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.AthleteID, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
             @Html.LabelFor(model => model.MeetID, "MeetID", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.DropDownList("MeetID", null, htmlAttributes: new { @class = "form-control" })
