--- a/Milestone 3/class_project/Views/Records/Edit.cshtml
+++ b/Milestone 3/class_project/Views/Records/Edit.cshtml
@@ -6,7 +6,7 @@
 
     <div class="jumbotron" style="background-color: cornflowerblue; color: white; margin-top: 20px;">
         <div class="container-fluid">
-            <h1> Update Athlete Record</h1>
+            <h1>Edit Athlete Record</h1>
         </div>
     </div>
 
@@ -26,6 +26,14 @@
             <div class="col-md-10">
                 @Html.EditorFor(model => model.RaceTime, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.RaceTime, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.AthleteID, "AthleteID", htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.DropDownList("AthleteID", null, htmlAttributes: new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.AthleteID, "", new { @class = "text-danger" })
             </div>
         </div>
 
