--- a/Sprint 1/Harmony/Views/Venues/Index.cshtml
+++ b/Sprint 1/Harmony/Views/Venues/Index.cshtml
@@ -5,7 +5,8 @@
 }
 
 <h2>Index</h2>
-
+@if (ViewBag.success == true)
+{
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
@@ -38,7 +39,8 @@
         <th></th>
     </tr>
 
-@foreach (var item in Model) {
+@foreach (var item in Model)
+{
     <tr>
         <td>
             @Html.DisplayFor(modelItem => item.User.FirstName)
@@ -65,11 +67,16 @@
             @Html.DisplayFor(modelItem => item.ZipCode)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.ID }) |
-            @Html.ActionLink("Details", "Details", new { id=item.ID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.ID })
+            @Html.ActionLink("Edit", "Edit", new { id = item.ID }) |
+            @Html.ActionLink("Details", "Details", new { id = item.ID }) |
+            @Html.ActionLink("Delete", "Delete", new { id = item.ID })
         </td>
     </tr>
 }
 
 </table>
+}
+else
+{
+     Html.ActionLink("Index", "Home");
+}
